Update code links

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ $(document).ready(function () {
 <div id="table-of-contents" class="section level2">
 <h2>Table of Contents</h2>
 <ul>
-<li>January 27th, 2017 – <a href="./jan27-intro-to-odes/index.html">Introduction to ODEs in R</a> [<a href="./jan25-intro-to-r/assets/jan25-intro-to-r.pdf">PDF</a>]</li>
+<li>January 27th, 2017 – <a href="./jan27-intro-to-odes/index.html">Introduction to ODEs in R</a> [<a href="./jan25-intro-to-r/assets/jan25-intro-to-r.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/jan27-intro-to-odes/code">Code</a>]</li>
 <li>January 25th, 2017 – <a href="./jan25-intro-to-r/index.html">Introduction to R</a></li>
 </ul>
 </div>
