Added some within-presentation links

--- a/index.html
+++ b/index.html
@@ -118,16 +118,32 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">EPI 501 Dynamics of Infectious Disease (Review)</h1>
 <h4 class="author"><em>Mathew Kiang</em></h4>
-<h4 class="date"><em>1/30/2017</em></h4>
 
 </div>
 
 
-<div id="table-of-contents" class="section level2">
-<h2>Table of Contents</h2>
+<div id="table-of-contents-reverse-chronological" class="section level2">
+<h2>Table of Contents (reverse chronological)</h2>
 <ul>
-<li>January 27th, 2017 – <a href="./jan27-intro-to-odes/index.html">Introduction to ODEs in R</a> [<a href="./jan25-intro-to-r/assets/jan25-intro-to-r.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/jan27-intro-to-odes/code">Code</a>]</li>
-<li>January 25th, 2017 – <a href="./jan25-intro-to-r/index.html">Introduction to R</a></li>
+<li>Week 2 (February 3, 2017 lab)
+<ul>
+<li>Measles worksheet [coming soon]</li>
+</ul></li>
+<li>Week 1 (January 27, 2017 lab)
+<ul>
+<li><a href="./jan27-intro-to-odes/index.html">Introduction to ODEs in R</a> [<a href="./jan25-intro-to-r/assets/jan25-intro-to-r.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/jan27-intro-to-odes/code">Code</a>]
+<ul>
+<li><a href="./jan27-intro-to-odes/index.html#13">SIR model line-by-line</a></li>
+<li><a href="./jan27-intro-to-odes/index.html#58">Plotting simulations</a></li>
+<li><a href="./jan27-intro-to-odes/index.html#68">Make an SI model</a></li>
+<li><a href="./jan27-intro-to-odes/index.html#74">Make an SIS model</a></li>
+<li><a href="./jan27-intro-to-odes/index.html#77">Make an SIR with births/deaths</a></li>
+</ul></li>
+</ul></li>
+<li>Week 0 (January 23, 2017)
+<ul>
+<li><a href="./jan25-intro-to-r/index.html">Introduction to R</a></li>
+</ul></li>
 </ul>
 </div>
 
