With measles worksheet

--- a/index.html
+++ b/index.html
@@ -127,11 +127,24 @@ $(document).ready(function () {
 <ul>
 <li>Week 2 (February 3, 2017 lab)
 <ul>
-<li>Measles worksheet [coming soon]</li>
+<li><a href="./jan30-timesteps-measles-seir/index.html">Measles worksheet</a> [<a href="./jan30-timesteps-measles-seir/measles-handout.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/jan30-timesteps-measles-seir/code">Code</a>]
+<ul>
+<li><a href="./jan30-timesteps-measles-seir/index.html#4">Measles SIR</a></li>
+<li><a href="./jan30-timesteps-measles-seir/index.html#12">Time-steps are arbitrary</a></li>
+<li><a href="./jan30-timesteps-measles-seir/index.html#18">Chickenpox and mumps</a></li>
+<li><a href="./jan30-timesteps-measles-seir/index.html#23">Plot multiple things</a></li>
+<li><a href="./jan30-timesteps-measles-seir/index.html#29">Find max infections</a></li>
+<li><a href="./jan30-timesteps-measles-seir/index.html#45">Boolean vectors</a></li>
+<li><a href="./jan30-timesteps-measles-seir/index.html#54">SEIR models</a></li>
+<li><a href="./jan30-timesteps-measles-seir/index.html#68">Open SEIR models</a></li>
+<li><a href="./jan30-timesteps-measles-seir/index.html#54">Plotting subsets</a></li>
+<li><a href="./jan30-timesteps-measles-seir/index.html#79">What is a for-loop</a></li>
+<li><a href="./jan30-timesteps-measles-seir/index.html#98">How birth/death rate affects I</a></li>
+</ul></li>
 </ul></li>
 <li>Week 1 (January 27, 2017 lab)
 <ul>
-<li><a href="./jan27-intro-to-odes/index.html">Introduction to ODEs in R</a> [<a href="./jan25-intro-to-r/assets/jan25-intro-to-r.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/jan27-intro-to-odes/code">Code</a>]
+<li><a href="./jan27-intro-to-odes/index.html">Introduction to ODEs in R</a> [<a href="./jan27-intro-to-odes/jan27-intro-to-r.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/jan27-intro-to-odes/code">Code</a>]
 <ul>
 <li><a href="./jan27-intro-to-odes/index.html#13">SIR model line-by-line</a></li>
 <li><a href="./jan27-intro-to-odes/index.html#58">Plotting simulations</a></li>
