--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <meta name="author" content="Mathew Kiang" />
 
+<meta name="date" content="2017-01-31" />
 
 <title>EPI 501 Dynamics of Infectious Disease (Review)</title>
 
@@ -118,6 +119,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">EPI 501 Dynamics of Infectious Disease (Review)</h1>
 <h4 class="author"><em>Mathew Kiang</em></h4>
+<h4 class="date"><em>January 31, 2017</em></h4>
 
 </div>
 
