Redid spacing on code slides

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Mathew Kiang" />
 
-<meta name="date" content="2017-01-31" />
+<meta name="date" content="2017-02-01" />
 
 <title>EPI 501 Dynamics of Infectious Disease (Review)</title>
 
@@ -119,7 +119,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">EPI 501 Dynamics of Infectious Disease (Review)</h1>
 <h4 class="author"><em>Mathew Kiang</em></h4>
-<h4 class="date"><em>January 31, 2017</em></h4>
+<h4 class="date"><em>February 01, 2017</em></h4>
 
 </div>
 
@@ -127,7 +127,7 @@ $(document).ready(function () {
 <div id="table-of-contents-reverse-chronological" class="section level2">
 <h2>Table of Contents (reverse chronological)</h2>
 <ul>
-<li>Week 2 (February 3, 2017 lab)
+<li>Week 2 (February 3, 2017 lab) – Revised 2/1/2017
 <ul>
 <li><a href="./jan30-timesteps-measles-seir/index.html">Measles worksheet</a> [<a href="./jan30-timesteps-measles-seir/measles-handout.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/jan30-timesteps-measles-seir/code">Code</a>]
 <ul>
@@ -144,7 +144,7 @@ $(document).ready(function () {
 <li><a href="./jan30-timesteps-measles-seir/index.html#98">How birth/death rate affects I</a></li>
 </ul></li>
 </ul></li>
-<li>Week 1 (January 27, 2017 lab)
+<li>Week 1 (January 27, 2017 lab) – Revised 2/1/2017
 <ul>
 <li><a href="./jan27-intro-to-odes/index.html">Introduction to ODEs in R</a> [<a href="./jan27-intro-to-odes/jan27-intro-to-r.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/jan27-intro-to-odes/code">Code</a>]
 <ul>
@@ -158,6 +158,7 @@ $(document).ready(function () {
 <li>Week 0 (January 23, 2017)
 <ul>
 <li><a href="./jan25-intro-to-r/index.html">Introduction to R</a></li>
+<li><a href="https://mkiang.shinyapps.io/DiseaseDynamics/">Shiny app for ODE models</a></li>
 </ul></li>
 </ul>
 </div>
