--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Mathew Kiang" />
 
-<meta name="date" content="2017-02-01" />
+<meta name="date" content="2017-02-03" />
 
 <title>EPI 501 Dynamics of Infectious Disease (Review)</title>
 
@@ -119,7 +119,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">EPI 501 Dynamics of Infectious Disease (Review)</h1>
 <h4 class="author"><em>Mathew Kiang</em></h4>
-<h4 class="date"><em>February 01, 2017</em></h4>
+<h4 class="date"><em>February 03, 2017</em></h4>
 
 </div>
 
@@ -129,6 +129,7 @@ $(document).ready(function () {
 <ul>
 <li>Week 2 (February 3, 2017 lab) – Revised 2/1/2017
 <ul>
+<li><a href="./feb-1-ebola/index.html">Ebola worksheet</a> [<a href="./feb-1-ebola/ebola-handout.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/feb-1-ebola/code">Code</a>]</li>
 <li><a href="./jan30-timesteps-measles-seir/index.html">Measles worksheet</a> [<a href="./jan30-timesteps-measles-seir/measles-handout.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/jan30-timesteps-measles-seir/code">Code</a>]
 <ul>
 <li><a href="./jan30-timesteps-measles-seir/index.html#4">Measles SIR</a></li>
