Added some sub-links for ebola

--- a/index.html
+++ b/index.html
@@ -129,7 +129,14 @@ $(document).ready(function () {
 <ul>
 <li>Week 2 (February 3, 2017 lab) – Revised 2/1/2017
 <ul>
-<li><a href="./feb-1-ebola/index.html">Ebola worksheet</a> [<a href="./feb-1-ebola/ebola-handout.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/feb-1-ebola/code">Code</a>]</li>
+<li><a href="./feb-1-ebola/index.html">Ebola worksheet</a> [<a href="./feb-1-ebola/ebola-handout.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/feb-1-ebola/code">Code</a>]
+<ul>
+<li><a href="./feb-1-ebola/index.html#4">SEIR with case fatality</a></li>
+<li><a href="./feb-1-ebola/index.html#14">Track total counts and total deaths</a></li>
+<li><a href="./feb-1-ebola/index.html#19">Effects of time-varying transmission probability</a></li>
+<li><a href="./feb-1-ebola/index.html#31">R0 and time-varying transmission probability</a></li>
+<li><a href="./feb-1-ebola/index.html#39">SEIR with time-varying transmission</a></li>
+</ul></li>
 <li><a href="./jan30-timesteps-measles-seir/index.html">Measles worksheet</a> [<a href="./jan30-timesteps-measles-seir/measles-handout.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/jan30-timesteps-measles-seir/code">Code</a>]
 <ul>
 <li><a href="./jan30-timesteps-measles-seir/index.html#4">Measles SIR</a></li>
