Added swirl tutorial and fixed typo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Mathew Kiang" />
 
-<meta name="date" content="2017-02-04" />
+<meta name="date" content="2017-02-06" />
 
 <title>EPI 501 Dynamics of Infectious Disease (Review)</title>
 
@@ -119,7 +119,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">EPI 501 Dynamics of Infectious Disease (Review)</h1>
 <h4 class="author"><em>Mathew Kiang</em></h4>
-<h4 class="date"><em>February 04, 2017</em></h4>
+<h4 class="date"><em>February 06, 2017</em></h4>
 
 </div>
 
@@ -127,7 +127,7 @@ $(document).ready(function () {
 <div id="table-of-contents-reverse-chronological" class="section level2">
 <h2>Table of Contents (reverse chronological)</h2>
 <ul>
-<li><p><a href="./errors.htlm"><strong>Common Error Messages</strong></a></p></li>
+<li><p><a href="./errors.html"><strong>Common Error Messages</strong></a></p></li>
 <li>Week 2 (February 3, 2017 lab) – Revised 2/3/2017
 <ul>
 <li><a href="./feb-1-ebola/index.html">Ebola worksheet</a> [<a href="./feb-1-ebola/ebola-handout.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/feb-1-ebola/code">Code</a>]
@@ -166,10 +166,15 @@ $(document).ready(function () {
 </ul></li>
 <li>Week 0 (January 23, 2017)
 <ul>
+<li><a href="http://swirlstats.com/students.html">Swirl Tutorial</a></li>
 <li><a href="./jan25-intro-to-r/index.html">Introduction to R</a></li>
 <li><a href="https://mkiang.shinyapps.io/DiseaseDynamics/">Shiny app for ODE models</a></li>
 </ul></li>
 </ul>
+</div>
+<div id="source" class="section level2">
+<h2>Source</h2>
+<p>You can find the source code along with all class code and PDFs on <a href="https://github.com/mkiang/epi501_review">this project’s GitHub page</a>.</p>
 </div>
 
 
