--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Mathew Kiang" />
 
-<meta name="date" content="2017-02-06" />
+<meta name="date" content="2017-02-16" />
 
 <title>EPI 501 Dynamics of Infectious Disease (Review)</title>
 
@@ -119,7 +119,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">EPI 501 Dynamics of Infectious Disease (Review)</h1>
 <h4 class="author"><em>Mathew Kiang</em></h4>
-<h4 class="date"><em>February 06, 2017</em></h4>
+<h4 class="date"><em>February 16, 2017</em></h4>
 
 </div>
 
@@ -128,7 +128,12 @@ $(document).ready(function () {
 <h2>Table of Contents (reverse chronological)</h2>
 <ul>
 <li><p><a href="./errors.html"><strong>Common Error Messages</strong></a></p></li>
-<li>Week 2 (February 3, 2017 lab) – Revised 2/3/2017
+<li>Week 4 (February 17, 2017) - 2/16/2017
+<ul>
+<li><a href="./feb-17-networks/index.html">Network models worksheet</a></li>
+</ul></li>
+<li>Week 3 (February 10, 2017) — No lab</li>
+<li>Week 2 (February 3, 2017 lab) — Revised 2/3/2017
 <ul>
 <li><a href="./feb-1-ebola/index.html">Ebola worksheet</a> [<a href="./feb-1-ebola/ebola-handout.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/feb-1-ebola/code">Code</a>]
 <ul>
