Updated with PDF and fixed links

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@ $(document).ready(function () {
 <h2>Table of Contents (reverse chronological)</h2>
 <ul>
 <li><p><a href="./errors.html"><strong>Common Error Messages</strong></a></p></li>
-<li>Week 4 (February 17, 2017) - 2/16/2017
+<li>Week 4 (February 17, 2017) - Revised 2/16/2017
 <ul>
-<li><a href="./feb-17-networks/index.html">Network models worksheet</a></li>
+<li><a href="./feb-17-networks/index.html">Network models worksheet</a> [<a href="./feb-17-networks/networks-handout.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/feb-17-networks/code">Code</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/feb-17-networks/data">Data</a>]</li>
 </ul></li>
 <li>Week 3 (February 10, 2017) — No lab</li>
 <li>Week 2 (February 3, 2017 lab) — Revised 2/3/2017
