Update TOC and links

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Mathew Kiang" />
 
-<meta name="date" content="2017-02-16" />
+<meta name="date" content="2017-03-05" />
 
 <title>EPI 501 Dynamics of Infectious Disease (Review)</title>
 
@@ -119,7 +119,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">EPI 501 Dynamics of Infectious Disease (Review)</h1>
 <h4 class="author"><em>Mathew Kiang</em></h4>
-<h4 class="date"><em>February 16, 2017</em></h4>
+<h4 class="date"><em>March 05, 2017</em></h4>
 
 </div>
 
@@ -128,6 +128,11 @@ $(document).ready(function () {
 <h2>Table of Contents (reverse chronological)</h2>
 <ul>
 <li><p><a href="./errors.html"><strong>Common Error Messages</strong></a></p></li>
+<li>Week 7 (March 3, 2017)
+<ul>
+<li>Final Review (Coming soon)</li>
+<li><a href="./mar-06-networks/index.html">Contact network models</a> [<a href="./mar-6-networks/contact-networks-handout.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/mar-6-networks/code">Code</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/mar-6-networks/data">Data</a>]</li>
+</ul></li>
 <li>Week 4 (February 17, 2017) - Revised 2/16/2017
 <ul>
 <li><a href="./feb-17-networks/index.html">Network models worksheet</a> [<a href="./feb-17-networks/networks-handout.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/feb-17-networks/code">Code</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/feb-17-networks/data">Data</a>]</li>
