--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Mathew Kiang" />
 
-<meta name="date" content="2017-03-05" />
+<meta name="date" content="2017-03-06" />
 
 <title>EPI 501 Dynamics of Infectious Disease (Review)</title>
 
@@ -119,7 +119,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">EPI 501 Dynamics of Infectious Disease (Review)</h1>
 <h4 class="author"><em>Mathew Kiang</em></h4>
-<h4 class="date"><em>March 05, 2017</em></h4>
+<h4 class="date"><em>March 06, 2017</em></h4>
 
 </div>
 
@@ -130,7 +130,7 @@ $(document).ready(function () {
 <li><p><a href="./errors.html"><strong>Common Error Messages</strong></a></p></li>
 <li>Week 7 (March 6, 2017)
 <ul>
-<li>Final Review (Coming soon)</li>
+<li><a href="./mar-6-review/index.html">Final Review</a> [<a href="./mar-6-review/final-review.pdf">PDF</a>]</li>
 <li><a href="./mar-6-networks/index.html">Contact network models</a> [<a href="./mar-6-networks/contact-networks-handout.pdf">PDF</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/mar-6-networks/code">Code</a>] | [<a href="https://github.com/mkiang/epi501_review/tree/master/mar-6-networks/data">Data</a>]</li>
 </ul></li>
 <li>Week 4 (February 17, 2017) - Revised 2/16/2017
