--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@ $(document).ready(function () {
 <h2>Table of Contents (reverse chronological)</h2>
 <ul>
 <li><p><a href="./errors.html"><strong>Common Error Messages</strong></a></p></li>
-<li>Week 0 (January 27, 2017)
+<li>Week 0 (January 16, 2018)
 <ul>
-<li><a href="http://swirlstats.com/students.html">Swirl Tutorial</a></li>
 <li><a href="https://swcarpentry.github.io/r-novice-gapminder/">Software Carpentry</a>: Strongly recommend you do sections 0 to 3 if you’ve never used <code>R</code> before. This will get you up and running with the software and introduce you to RStudio.</li>
+<li><a href="http://swirlstats.com/students.html">Swirl Tutorial</a>: If you’ve never used <code>R</code> before, we highly recommend doing this tutorial and the SW tutorial (above).</li>
 <li><a href="https://mkiang.shinyapps.io/DiseaseDynamics/">Shiny app for ODE models</a>: Example of what we’ll be doing throughout the course.</li>
 </ul></li>
 </ul>
