--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@ $(document).ready(function () {
 <ul>
 <li><a href="https://swcarpentry.github.io/r-novice-gapminder/">Software Carpentry</a>: Strongly recommend you do sections 0 to 3 if you’ve never used <code>R</code> before. This will get you up and running with the software and introduce you to RStudio.</li>
 <li><a href="http://swirlstats.com/students.html">Swirl Tutorial</a>: If you’ve never used <code>R</code> before, we highly recommend doing this tutorial and the SW tutorial (above).</li>
+<li><a href="./spring_2017/jan25-intro-to-r/index.html">Super quick <code>R</code> Review</a>: If you’ve used <code>R</code> in the past but need a refresher, this is a tutorial I made for Spring 2017. It is not nearly as thorough as the above two.</li>
 <li><a href="https://mkiang.shinyapps.io/DiseaseDynamics/">Shiny app for ODE models</a>: Example of what we’ll be doing throughout the course.</li>
 </ul></li>
 </ul>
@@ -142,7 +143,7 @@ $(document).ready(function () {
 <h2>Source / Archive</h2>
 <ul>
 <li>You can find the source code along with all class code and PDFs on <a href="https://github.com/mkiang/epi501_review">this project’s GitHub page</a>.</li>
-<li>You can find slids from <a href="./spring_2017/index.html">Spring 2017 here</a>.</li>
+<li>You can find slides from <a href="./spring_2017/index.html">Spring 2017 here</a>.</li>
 </ul>
 </div>
 
