Added todays lecture

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Mathew Kiang" />
 
-<meta name="date" content="2018-01-16" />
+<meta name="date" content="2018-01-24" />
 
 <title>EPI 501 Dynamics of Infectious Disease (Review)</title>
 
@@ -121,7 +121,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">EPI 501 Dynamics of Infectious Disease (Review)</h1>
 <h4 class="author"><em>Mathew Kiang</em></h4>
-<h4 class="date"><em>January 16, 2018</em></h4>
+<h4 class="date"><em>January 24, 2018</em></h4>
 
 </div>
 
@@ -130,6 +130,12 @@ $(document).ready(function () {
 <h2>Table of Contents (reverse chronological)</h2>
 <ul>
 <li><p><a href="./errors.html"><strong>Common Error Messages</strong></a></p></li>
+<li>Week 1 (January 22, 2018)
+<ul>
+<li><a href="./20180124_intro_to_R_headaches/index.html">Introduction to <code>R</code>, discrete time models, non-infectious ODE models.</a></li>
+<li>Download <a href="./exercises/01_headaches/headache_exercises.zip"><code>headache_exercises.zip</code></a></li>
+<li>Annotated code [Coming soon]</li>
+</ul></li>
 <li>Week 0 (January 16, 2018)
 <ul>
 <li><a href="https://swcarpentry.github.io/r-novice-gapminder/">Software Carpentry</a>: Strongly recommend you do sections 0 to 3 if you’ve never used <code>R</code> before. This will get you up and running with the software and introduce you to RStudio.</li>
