Allow direct downloads

--- a/index.html
+++ b/index.html
@@ -133,7 +133,15 @@ $(document).ready(function () {
 <li>Week 1 (January 22, 2018)
 <ul>
 <li><a href="./20180124_intro_to_R_headaches/index.html">Introduction to <code>R</code>, discrete time models, non-infectious ODE models.</a></li>
-<li>Download <a href="./exercises/01_headaches/headache_exercises.zip"><code>headache_exercises.zip</code></a></li>
+<li>Download <a href="./exercises/01_headaches/headache_exercises.zip"><code>headache_exercises.zip</code></a>
+<ul>
+<li>Or download the code here (not recommended):
+<ul>
+<li><a href="https://raw.githubusercontent.com/mkiang/epi501_review/master/exercises/01_headaches/discrete_births_and_deaths.R"><code>discrete_births_and_deaths.R</code></a></li>
+<li><a href="https://raw.githubusercontent.com/mkiang/epi501_review/master/exercises/01_headaches/headache_discrete.R"><code>headache_discrete.R</code></a></li>
+<li><a href="https://raw.githubusercontent.com/mkiang/epi501_review/master/exercises/01_headaches/headache_ode.R"><code>headache_ode.R</code></a></li>
+</ul></li>
+</ul></li>
 <li>Annotated code [Coming soon]</li>
 </ul></li>
 <li>Week 0 (January 16, 2018)
