Added ODE walkthrough slides

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Mathew Kiang" />
 
-<meta name="date" content="2018-01-28" />
+<meta name="date" content="2018-01-31" />
 
 <title>EPI 501 Dynamics of Infectious Disease (Review)</title>
 
@@ -121,7 +121,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">EPI 501 Dynamics of Infectious Disease (Review)</h1>
 <h4 class="author"><em>Mathew Kiang</em></h4>
-<h4 class="date"><em>January 28, 2018</em></h4>
+<h4 class="date"><em>January 31, 2018</em></h4>
 
 </div>
 
@@ -132,6 +132,7 @@ $(document).ready(function () {
 <li><p><a href="./errors.html"><strong>Common Error Messages</strong></a></p></li>
 <li>Week 1 (January 22, 2018)
 <ul>
+<li><a href="./20180129_intro_odes/index.html">Introduction to ODE models in <code>R</code></a></li>
 <li><a href="./20180124_intro_to_R_headaches/index.html">Introduction to <code>R</code>, discrete time models, non-infectious ODE models.</a></li>
 <li>Download <a href="./exercises/01_headaches/headache_exercises.zip"><code>headache_exercises.zip</code></a>
 <ul>
