--- a/20180129_intro_odes/index.html
+++ b/20180129_intro_odes/index.html
@@ -777,7 +777,7 @@ SI &lt;- function(t, x, parms){
     with(as.list(c(parms, x)), {
 
 *       N &lt;- S + I 
-        dS &lt;- - (beta * k * S * I) / N}}
+*       dS &lt;- - (beta * k * S * I) / N
 *       dI &lt;- + (beta * k * S * I) / N
 * 
     
