Update with PDF

--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@ $(document).ready(function () {
 <h2>Table of Contents (reverse chronological)</h2>
 <ul>
 <li><p><a href="./errors.html"><strong>Common Error Messages</strong></a></p></li>
+<li>Week 2 (January 29, 2018)
+<ul>
+<li><a href="./20180202_ebola/index.html">Ebola and SEIR models</a> [<a href="./20180202_ebola/20180202-ebola.pdf">PDF</a>] [<a href="https://github.com/mkiang/epi501_review/tree/master/20180202_ebola/code">Code and Data Files</a>]</li>
+</ul></li>
 <li>Week 1 (January 22, 2018)
 <ul>
 <li><a href="./20180129_intro_odes/index.html">Introduction to ODE models in <code>R</code></a> [<a href="./20180129_intro_odes/20180129-intro-odes.pdf">PDF</a>] [<a href="https://github.com/mkiang/epi501_review/tree/master/20180129_intro_odes/code">Code Files</a>]
