Update ebola sections

--- a/index.html
+++ b/index.html
@@ -132,7 +132,15 @@ $(document).ready(function () {
 <li><p><a href="./errors.html"><strong>Common Error Messages</strong></a></p></li>
 <li>Week 2 (January 29, 2018)
 <ul>
-<li><a href="./20180202_ebola/index.html">Ebola and SEIR models</a> [<a href="./20180202_ebola/20180202-ebola.pdf">PDF</a>] [<a href="https://github.com/mkiang/epi501_review/tree/master/20180202_ebola/code">Code and Data Files</a>]</li>
+<li><a href="./20180202_ebola/index.html">Ebola and SEIR models</a> [<a href="./20180202_ebola/20180202-ebola.pdf">PDF</a>] [<a href="https://github.com/mkiang/epi501_review/tree/master/20180202_ebola/code">Code and Data Files</a>]
+<ul>
+<li><a href="./20180202_ebola/index.html#3">SEIR model with case fatality ratio</a></li>
+<li><a href="./20180202_ebola/index.html#11">Plotting SEIR lines</a></li>
+<li><a href="./20180202_ebola/index.html#13">COunting total cases and total deaths</a></li>
+<li><a href="./20180202_ebola/index.html#18">Time-varying transmission</a></li>
+<li><a href="./20180202_ebola/index.html#30">Calculate changing <span class="math inline">\(R_0\)</span></a></li>
+<li><a href="./20180202_ebola/index.html#38">Time-varying beta</a></li>
+</ul></li>
 </ul></li>
 <li>Week 1 (January 22, 2018)
 <ul>
