Update the index page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Mathew Kiang" />
 
-<meta name="date" content="2018-02-05" />
+<meta name="date" content="2018-02-11" />
 
 <title>EPI 501 Dynamics of Infectious Disease (Review)</title>
 
@@ -121,7 +121,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">EPI 501 Dynamics of Infectious Disease (Review)</h1>
 <h4 class="author"><em>Mathew Kiang</em></h4>
-<h4 class="date"><em>February 05, 2018</em></h4>
+<h4 class="date"><em>February 11, 2018</em></h4>
 
 </div>
 
@@ -130,6 +130,18 @@ $(document).ready(function () {
 <h2>Table of Contents (reverse chronological)</h2>
 <ul>
 <li><p><a href="./errors.html"><strong>Common Error Messages</strong></a></p></li>
+<li>Week 3 (Februrary 9, 2018)
+<ul>
+<li>Review session:
+<ul>
+<li>Went over Week 1 and Week 2 slides in class, line-by-line. Please review those if you didn’t attend the lab.</li>
+<li>In addition, we spent a lot of time on the ebola time-varying transmission model.
+<ul>
+<li>I made <a href="./20180209_lab_session/ebola_questions.nb.html">a notebook to answer the two questions</a> we didn’t have time for: (1) What happens when you delay intervention? (2) What happens when you change the rate of decay?</li>
+</ul></li>
+<li>As a reminder, <a href="https://mkiang.shinyapps.io/DiseaseDynamics/">I made an interactive infectious disease app you can play with</a>. Play with parameters, especially the relationship between the latent period and the infectious period, to get a better sense of <strong>when</strong> we need a latent compartment.</li>
+</ul></li>
+</ul></li>
 <li>Week 2 (January 29, 2018)
 <ul>
 <li><a href="./20180202_ebola/index.html">Ebola and SEIR models</a> [<a href="./20180202_ebola/20180202-ebola.pdf">PDF</a>] [<a href="https://github.com/mkiang/epi501_review/tree/master/20180202_ebola/code">Code and Data Files</a>]
